# gmail-automation

./: README.md  pyproject.toml
knowledge/: user_preference.txt
src/gmail-crew-ai/: crew.py  main.py  models.py
src/gmail-crew-ai/config/: agents.yaml  tasks.yaml
src/gmail-crew-ai/tools/: date_tools.py  gmail_tools.py  slack_tools.py
